@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.98">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.99">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -27,8 +27,9 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.98 [20230729]:
-- Added Clean Cache On Update Setting
+Changelog 0.3.99 [20230803]:
+- Added file Management Size Settings
+- Fixed Kodi Language Settings
     </news>
   </extension>
 </addon>
